prevent zoom on mobile phone by increasing font-size on input element

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -72,6 +72,7 @@ label {
   border: none;
   appearance: none;
   outline: none;
+  font-size: 1rem;
 }
 
 .error {
